Additional spacing issues with search bar resolved.

--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,7 @@ p a:hover{
 #search input{
     height: 100%;
     width: 100%;
-    padding-left: 5.5%;
+    padding-left: 7%;
     vertical-align: center;
     border-radius: 10px;
 }
